# lightning-talks

./: CHANGELOG.md  lightning-talks.cabal
qc/: Main.hs
rf/: Main.hs
